Adding new pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-/*@tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities;*/
+@tailwind utilities;
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
@@ -79,7 +79,7 @@ a {
     padding-left: 70px;
   }
   .nav-ul li {
-    padding: 30px 10px 0px 10px;
+    padding: 10px 10px 0px 10px;
     font-size: medium;
   }
 }
